overal foto toegevoegd

--- a/contact-info.css
+++ b/contact-info.css
@@ -17,3 +17,15 @@ background-color: black;
     text-align: center;
     margin-top: 150px;
   }
+
+  #image-container {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+
+.rechts-bovenhoek {
+    width: 200px;
+    height: auto;
+}
